force-app/main/default/objects/Visitor_Log__c/Visitor_Log__c.object-meta.xml
<CustomObject>
    <label>Visitor Log</label>
    <pluralLabel>Visitor Logs</pluralLabel>
    <nameField>
        <label>Visitor Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>VL-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>