force-app/main/default/objects/Visitor_Log__c/fields/Page_Viewed__c.field-meta.xml
<CustomField>
    <fullName>Page_Viewed__c</fullName>
    <label>Page Viewed</label>
    <type>Text</type>
    <length>255</length>
</CustomField>