force-app/main/default/objects/Visitor_Log__c/fields/Referrer__c.field-meta.xml
<CustomField>
    <fullName>Referrer__c</fullName>
    <label>Referrer</label>
    <type>Text</type>
    <length>255</length>
</CustomField>