force-app/main/default/objects/Visitor_Log__c/fields/Session_Id__c.field-meta.xml
<CustomField>
    <fullName>Session_Id__c</fullName>
    <description>Client-generated identifier so repeat views in one session aren&apos;t double counted</description>
    <label>Session Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>