force-app/main/default/objects/Visitor_Log__c/fields/Visited_Date__c.field-meta.xml
<CustomField>
    <fullName>Visited_Date__c</fullName>
    <label>Visited Date</label>
    <type>DateTime</type>
</CustomField>